@@ -1,3 +1,9 @@
+2004-06-28  Paolo Bonzini  <bonzini@gnu.org>
+
+	* include/Makefile.am: Give a .gch extension to
+	the PCH files, not only to the directory.
+	* include/Makefile.in: Regenerate.
+
 2004-06-28  Paolo Carlini  <pcarlini@suse.de>
 
 	* config/locale/gnu/monetary_members.cc
